Document the constraints around TSDB scrape interval and CEEMS API server's update interval (#575)
